# raspberry-pi

./: .gitignore  CMakeLists.txt  LICENSE  TODO
git-hooks/: pre-commit
scripts/: format
src/: BaseVideoDevice.cpp  BaseVideoDevice.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  CliOptions.cpp  CliOptions.hpp  Contour.cpp  Contour.hpp  ContourDetector.cpp  ContourDetector.hpp  DepthController.cpp  DepthController.hpp  HSVImage.cpp  HSVImage.hpp  Logger.cpp  Logger.hpp  Mission.cpp  Mission.hpp  RPIVideoDevice.cpp  RPIVideoDevice.hpp  RXPacket.cpp  RXPacket.hpp  Rectangle.cpp  Rectangle.hpp  Robot.cpp  Robot.hpp  Serial.cpp  Serial.hpp  StartingGateMission.cpp  StartingGateMission.hpp  TXPacket.cpp  TXPacket.hpp  USBVideoDevice.hpp  VideoDevice.cpp  VideoDevice.hpp  robosub_rpi.cpp
src/experiments/: CMakeLists.txt  Circle.hpp  ContourDetector.cpp  ContourDetector.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  blob_detect.cpp  color_follower.cpp  contour_detector.cpp  contour_detector_value.cpp  mode_setting.cpp  neural_network.cpp  red_follower.cpp  threshold.cpp  threshold_picker.cpp  vision_pipeline.cpp
