find_package(OpenCV REQUIRED)
add_executable(blob_detect blob_detect.cpp)
target_link_libraries(blob_detect ${OpenCV_LIBS})
add_executable(neural_network neural_network.cpp)
target_link_libraries(neural_network ${OpenCV_LIBS})
add_executable(threshold threshold.cpp ../HSVImage.cpp)
target_link_libraries(threshold ${OpenCV_LIBS})
add_executable(color_follower color_follower.cpp ../HSVImage.cpp)
target_link_libraries(color_follower ${OpenCV_LIBS})
add_executable(contour_detector contour_detector.cpp ../HSVImage.cpp)
target_link_libraries(contour_detector ${OpenCV_LIBS})
