find_package(OpenCV REQUIRED)
add_executable(blob_detect blob_detect.cpp)
target_link_libraries(blob_detect ${OpenCV_LIBS})
add_executable(neural_network neural_network.cpp)
target_link_libraries(neural_network ${OpenCV_LIBS})
add_executable(threshold threshold.cpp ../HSVImage.cpp)
target_link_libraries(threshold ${OpenCV_LIBS})
add_executable(threshold_picker threshold_picker.cpp ../HSVImage.cpp)
target_link_libraries(threshold_picker ${OpenCV_LIBS})
add_executable(contour_detector contour_detector.cpp ../HSVImage.cpp)
target_link_libraries(contour_detector ${OpenCV_LIBS})
add_executable(contour_detector_value contour_detector_value.cpp ../HSVImage.cpp)
target_link_libraries(contour_detector_value ${OpenCV_LIBS})
#add_executable(vision_pipeline vision_pipeline.cpp ContourDetector.cpp ../HSVImage.cpp ../Contour.cpp ../Rectangle.cpp ../Circle.cpp)
#target_link_libraries(vision_pipeline ${OpenCV_LIBS})
add_executable(mode_setting mode_setting.cpp)
